fixed the issue #143
